// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Documentation: Loaders Basic Usage renders 1`] = `
<Fragment>
  <h2
    id="basic-usage"
  >
    Basic usage
  </h2>
  <p>
    To use a default loader add 
    <CodeTags
      code=".loader"
      type="secondary"
    />
     to a 
    <CodeTags
      code="<div>"
      type="primary"
    />
    .
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="loader"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Loaders CenteredLoader renders 1`] = `
<Fragment>
  <h2
    id="centered-loader"
  >
    Centered loader
  </h2>
  <p>
    To center the loader add class 
    <CodeTags
      code=".loader-center"
      type="secondary"
    />
    .
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="loader loader-center"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Loaders Muted Loader renders 1`] = `
<Fragment>
  <h2
    id="muted-loader"
  >
    Muted loader
  </h2>
  <p>
    Use class 
    <CodeTags
      code=".loader-muted"
      type="secondary"
    />
     to make the loader muted.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="loader loader-muted"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Loaders Overview renders 1`] = `
<section
  id="loader-page-overview"
>
  <h2
    id="overview"
  >
    Overview
  </h2>
  <ComponentPreview
    codeFigure={true}
    language="html"
    removeOuterTag={true}
    showCasePanel={true}
    showCasePanelAdvanced={
      Object {
        "elements": Array [
          Object {
            "component": <Loader />,
            "description": "Loading spinners should be used when the wait time is anticipated to extend over one second.",
            "options": Object {
              "radio": Array [
                Object {
                  "id": "color_radio",
                  "title": "Color",
                  "values": Array [
                    Object {
                      "name": "Default",
                    },
                    Object {
                      "name": "Inverted",
                      "value": Object {
                        "backgroundDark": true,
                        "inverted": true,
                      },
                    },
                  ],
                },
                Object {
                  "id": "size_radio",
                  "title": "Size",
                  "values": Array [
                    Object {
                      "name": "Default",
                      "value": Object {
                        "size": "",
                      },
                    },
                    Object {
                      "name": "Small",
                      "value": Object {
                        "size": "loader-sm",
                      },
                    },
                  ],
                },
              ],
            },
            "title": "Loader",
          },
        ],
        "id": "no-tabs",
      }
    }
  />
  <section
    id="loaders-how-to-use"
  >
    <h3>
      How to use loader in context
    </h3>
    <div
      className="row"
    >
      <div
        className="col-12"
        key="0"
      >
        <div
          className="slab slab-plain slab-border-success"
          key="0"
        >
          <span
            className="h3"
          >
            Do
          </span>
          <div
            className="d-flex justify-content-center px-3 h-100 align-items-center pb-5"
          >
            <div
              className="d-flex flex-column align-items-center col-5"
            >
              <p
                className="text-align-center"
              >
                <b>
                  Opening BankID app on your mobile device, please don't close this window
                </b>
              </p>
              <div
                className="loader"
              />
            </div>
          </div>
        </div>
      </div>
      <p
        className="m-3"
      >
        If the anticipated waiting time is long, it’s recommended to show a text explaining what is happening to the user.
      </p>
      <div
        className="col-6"
        key="0"
      >
        <div
          className="slab slab-plain slab-border-success"
          key="0"
        >
          <span
            className="h3"
          >
            Do
          </span>
          <div
            className="d-flex justify-content-center px-3 h-100 align-items-center pb-5"
          >
            <button
              className="btn btn-primary disabled"
            >
              ID authentication
              <div
                className="loader loader-sm"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        className="col-6"
        key="1"
      >
        <div
          className="slab slab-plain slab-border-error"
          key="1"
        >
          <span
            className="h3"
          >
            Don't
          </span>
          <div
            className="d-flex justify-content-center px-3 h-100 align-items-center pb-5"
          >
            <div
              className="d-flex"
            >
              <button
                className="btn btn-primary btn-bank-id"
                disabled={true}
              >
                ID authentication
                <i
                  className="bank-id bank-id-se"
                />
              </button>
              <div
                className="loader loader-sm align-self-center"
              />
            </div>
          </div>
        </div>
      </div>
      <p
        className="m-3"
      >
        If the loading is contextual to a certain button on the page, the 
        <Link
          to="/components/buttons"
        >
          button
        </Link>
         loading state can be used instead of the loader component.
      </p>
    </div>
  </section>
</section>
`;

exports[`Documentation: Loaders Sizes renders 1`] = `
<Fragment>
  <h2
    id="sizes"
  >
    Sizes
  </h2>
  <p>
    In addition to 
    <CodeTags
      code=".loader"
      type="secondary"
    />
     you can use 
    <CodeTags
      code=".loader-sm"
      type="secondary"
    />
     and 
    <CodeTags
      code=".loader-lg"
      type="secondary"
    />
     to decrease or increase the size of the loader.
  </p>
  <h3>
    Small
  </h3>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="loader loader-sm"
    />
  </ComponentPreview>
  <h3>
    Large
  </h3>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <div
      className="loader loader-lg"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Documentation: Loaders renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    The loader component should be used when the site or application is performing computation, notifying   the user that their action is being processed.
  </p>
  <Overview />
</DocContainer>
`;
